# picoruby-conf-nrf

./: .gitmodules  CMakeLists.txt  LICENSE  README.md  Rakefile
include/: msc_disk.h  tusb_config.h
keyboards/meishi/: README.md  keymap.rb
mrblib/: usb_task.rb
nrf/: nrfx_config.h  s140_v6.ld  sdk_config.h
src/: gpio.c  hal.c  main.c  msc_disk.c  usb_descriptors.c
